overflow, scrollbar fixed

--- a/devcom/src/App.css
+++ b/devcom/src/App.css
@@ -5,6 +5,9 @@
 .body{
   /* padding-top: 200px; */
 }
+::-webkit-scrollbar{
+  display: none;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
