--- a/devcom/src/index.css
+++ b/devcom/src/index.css
@@ -4,7 +4,7 @@ body {
   padding: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
+overflow-x: hidden;
 }
 
 code {
